# quantlux-backend

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt
alembic/: env.py
app/: __init__.py
app/ai/: __init__.py  gemini_client.py  prompts.py  sentiment.py
app/analytics/: __init__.py  ai_insights.py  ai_market.py  simulation.py  tracker.py
app/core/: __init__.py  decorators.py  di.py  enums.py  exceptions.py  messages.py  protocols.py  redis_client.py  settings.py  symbols.py
app/db/: session.py
app/engine/: __init__.py  api.py  bot.py  execution_helpers.py  executor.py  feed.py  health.py  lifecycle.py  queue.py  regime.py  splitter.py  strategy_manager.py  watchdog.py
app/execution/: broker.py  metaapi.py
app/indicators/: __init__.py  adx.py  atr.py  bollinger.py  utils.py
app/metaapi/: __init__.py  adapter.py  data.py  info.py  mappers.py  orders.py  rate_limiter.py
app/models/: __init__.py  analytics.py  market.py  news.py  trade.py
app/risk/: __init__.py  ai_guard.py  correlation.py  drawdown.py  manager.py  trade_manager.py
app/schemas/: __init__.py  analytics.py  metaapi.py  news.py  rsi.py  signal.py
app/services/: account.py  analytics_service.py  market_data_service.py  news_service.py  simulation.py  visualizer.py
app/strategies/: __init__.py  base.py  filters.py
app/telegram/: __init__.py  bot.py
app/utils/: logger.py  notifiers.py
backtesting/: __init__.py  data.py  optimizer.py  runner.py  strategy.py
config/: logging.yaml  symbols.yaml
docs/: INSTALLATION.md  TODO.md
news/: __init__.py  calendar.py  manager.py
notebooks/: analysis.ipynb  setup_notebook.py
routes/: __init__.py  dashboard.py
scripts/: backtest.py  docker.sh  rename_models.py  start.sh
tests/: test_horizontal_scaling.py
(+54 files in other folders)
