[project]
name = "quantlux"
version = "0.1.0"
description = "QuantLux-FX — autonomous algorithmic forex trading system"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }

dependencies = [
    # Config & Data
    "pandas>=3.0.0",
    "numpy>=2.4.0",
    "pydantic>=2.12.0",
    "pydantic-settings>=2.7.0",
    "python-dotenv>=1.2.1",
    "PyYAML>=6.0.1",
    # Network & Async
    "requests>=2.32.5",
    "aiohttp>=3.7.4",
    "httpx>=0.28.1",
    "websockets>=13.0",
    "lxml",
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    # Scheduling & Notifications
    "apscheduler>=3.11.2",
    "python-telegram-bot>=22.6",
    "loguru>=0.7.3",
    # Task Queue
    "celery>=5.4.0",
    "redis>=5.2.1",
    # Analytics & Performance
    "scipy>=1.17.0",
    "matplotlib>=3.10.8",
    "ipykernel>=6.29.5",
    "notebook>=7.3.2",
    "jupyterlab>=4.3.5",
    # MetaAPI
    "metaapi-cloud-sdk>=29.0.0",
    # AI / Gemini
    "google-genai>=1.0.0",
    "backtrader>=1.9.78.123",
    "yfinance>=1.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.6.0",
    "mypy>=1.11.0",
]

[project.scripts]
quantlux = "main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app", "news", "scripts", "backtesting"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.6.0",
    "mypy>=1.11.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"
select = ["E", "F", "I", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
strict = false

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
